--- a/apps/uart_i2c_bootloader/bootloader/firmware/src/config/pic32cm_jh01_curiosity_pro/harmony-manifest-success.yml
+++ b/apps/uart_i2c_bootloader/bootloader/firmware/src/config/pic32cm_jh01_curiosity_pro/harmony-manifest-success.yml
@@ -4,16 +4,16 @@
 
 
 project: bootloader
-creation_date: 2022-01-18T17:54:08.507+05:30[Asia/Calcutta]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
+creation_date: 2022-05-26T12:28:35.005+05:30[Asia/Calcutta]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
 operating_system: Windows 10
 mhc_mode: Standalone            # [IDE|Standalone|Headless]
-mhc_version: v3.8.2
+mhc_version: v3.8.5
 mplabx_version: NA        # if MPLAB X plugin only
 plugin_version: NA        # if MPLAB X plugin only
 compiler: xc32
 
 modules:
-    - {name: "csp", version: "unknown"}
-    - {name: "dev_packs", version: "unknown"}
-    - {name: "bootloader", version: "unknown"}
+    - {name: "csp", version: "v3.13.0-eng.1"}
+    - {name: "dev_packs", version: "v3.13.0-eng.1"}
+    - {name: "bootloader", version: "v3.6.0-rc.3"}
 
