--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
 package:
   format-version: "1.0.0"
   name: "bootloader_apps_pic32cm_jh00_jh01"
-  version: "3.1.0"
+  version: "v3.1.0"
   type: "application"
   status: "production"
   required: true
@@ -9,6 +9,6 @@ package:
   dependencies:
     - name: "bootloader"
       type: "package"
-      version: "dev"
+      version: "v3.6.0"
 
 
