--- a/apps/i2c_host_app_sdcard/firmware/sam_e54_xpro.X/mcc-manifest-generated-success.yml
+++ b/apps/i2c_host_app_sdcard/firmware/sam_e54_xpro.X/mcc-manifest-generated-success.yml
@@ -2,12 +2,12 @@
 
 manifest_file_version: 1.0.0
 project: i2c_bootloader_host_app_sdcard_sam_e54_xpro
-creation_date: 2025-06-19T14:05:06.049+05:30[Asia/Calcutta]
-operating_system: Windows 11
+creation_date: 2025-06-27T14:47:22.100+05:30[Asia/Calcutta]
+operating_system: Windows 10
 mcc_mode: IDE
 mcc_mode_version: v6.25
 device_name: ATSAME54P20A
-compiler: XC32 4.20
+compiler: XC32 4.60
 mcc_version: 5.5.2
 mcc_core_version: 5.7.1
 content_manager_version: 5.0.1
@@ -18,9 +18,7 @@ device_library: {library_class: com.microchip.mcc.harmony.Harmony3Library, name:
     V3, version: 1.5.5}
 packs: {name: SAME54_DFP, version: 3.9.244}
 modules:
-- {name: csp, type: HARMONY, version: v3.22.4-43-g0654a05}
-- {name: core, type: HARMONY, version: v3.15.2}
-- {name: filex, type: HARMONY, version: v6.4.0_rel}
-- {name: CMSIS_5, type: HARMONY, version: 5.8.0}
-- {name: littlefs, type: HARMONY, version: v2.11.0}
+- {name: CMSIS_5, type: HARMONY, version: 5.9.0}
 - {name: bsp, type: HARMONY, version: v3.22.0}
+- {name: core, type: HARMONY, version: v3.15.2}
+- {name: csp, type: HARMONY, version: v3.22.5}
