--- a/package.yml
+++ b/package.yml
@@ -1,14 +1,12 @@
 package:
   format-version: "1.0.0"
   name: "bootloader_apps_pic32cm_jh00_jh01"
-  version: "v3.1.0"
+  version: "v3.2.0"
   type: "application"
   status: "production"
-  required: true
+  required: false
 
   dependencies:
     - name: "bootloader"
       type: "package"
-      version: "v3.6.0"
-
-
+      version: "v3.8.0"
